Release notes for xmlBlaster @version@ (http://www.xmlBlaster.org)

Changes for 0.xxx [xx, xxx 2003]
================================
 o added Martin's managed objects in the c++ clients 

 o Java client library interface change, removed method
   boolean disconnect(DisconnectQos disconnectQos, boolean clearClientQueue, boolean shutdown, boolean shutdownCb) 
   Please configure the options in DisconnectQos and use disconnect(DisconnectQos)

 o BUGFIX in java client library. If the client side tail back queue contains
   persistent entries on disconnect they are kept and resent on new connection
   of the same client (same pubSessionId).
   http://www.xmlblaster.org/xmlBlaster/doc/requirements/interface.disconnect.html

 o Merged basic JMX support from branch jmx_gui

 o BUGFIX: PersistentStore and PersistentQueue have now separate pools. Avoids
   deadlocks when configured with only 1 connection AND msg store AND
   other queues are peeking objects from persistence (for example when both caching).

 o JdbcConnectionPool works now with wait/notify instead of sleep/interrupt

 o Better exception handling in JdbcManagerCommonTable to catch even 
   throwables

 o BUGFIX: Fixed subject id to be without public sessionId in all cases.
   Had severe impact on PtP messages as subject queue name was sometimes
   identical to session queue name.

 o Fixed memory leak in JDBC layer (clear SQLWarnings)
   Has impact on persistent messages only

Changes for 0.846 [26, Apr 2003]
================================

 o Enhanced Python support added by Peter <spex66@gmx.net>
   See xmlBlaster/src/python/README

 o The plugin overview:
   http://www.xmlblaster.org/MessageFlowPubSubOverview.html

 o BUGFIX: sync gap in SubjectInfo.java for PtP messages and offline clients

 o removed I_Queue.take methods
 
 o removed JdbcQueuePlugin. Now only JdbcQueueCommonTablePlugin available. This was
   necessary since maintenance of double code became prohibitive.
